project-be-books/deploy/kubernetes/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookreviews
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
